<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="net.rajeesh.mobile.android.app.ttd.todos.AddItemActivity">

  <EditText
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/edEditText"
      android:layout_alignParentStart="true"
      android:layout_below="@+id/radioGroup"
      android:layout_alignParentEnd="true"
      android:hint="@string/add_item"/>
  <RadioGroup
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:id="@+id/radioGroup">
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_priority"
        android:id="@+id/rbHigh"
        android:checked="false"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentStart="true"
        android:onClick="onRadioButtonClicked"/>
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normal_priority"
        android:id="@+id/rbNormal"
        android:checked="true"
        android:layout_below="@+id/rbHigh"
        android:layout_alignParentStart="true"
        android:onClick="onRadioButtonClicked"/>
    <RadioButton
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/low_priority"
        android:id="@+id/rbLow"
        android:checked="false"
        android:layout_below="@+id/rbNormal"
        android:layout_alignParentStart="true"
        android:onClick="onRadioButtonClicked"/>
  </RadioGroup>
  <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/save"
      android:id="@+id/btnSave"
      android:onClick="saveItem"
      android:layout_below="@+id/edEditText"
      android:layout_alignParentEnd="true"/>
</RelativeLayout>
